[package]
name = "novastar-core"
version = "0.3.1"
edition = "2024"
license = "Apache-2.0"
description = "Rust library for interacting with Novastar LED Screen processors"
repository = "https://github.com/joele89/novastar-core"
readme = "README.md"

[dependencies]
serialport = "~4.7.0"
num_enum = "0.7.3"
strum_macros = "0.27.1"
thiserror = "2.0.12"

[features]
debug = []

[[test]]
name = "tests"
path = "src/tests.rs"
